// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Services matches snapshot (dark mode) 1`] = `
<div>
  <section
    class="css-uonhhq"
    id="services"
  >
    <div
      class="MuiBox-root css-42lq0"
    />
    <div
      class="MuiBox-root css-1xxox8e"
    />
    <div
      class="MuiBox-root css-10kijji"
    />
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-5c1adp-MuiContainer-root"
    >
      <div>
        <div
          class="MuiBox-root css-x8unny"
        >
          <div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-69mhx8-MuiTypography-root"
            >
              What I Offer
            </p>
          </div>
          <h2
            class="css-181k9v3"
          >
            Services
          </h2>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1joc5b-MuiTypography-root"
          >
            Transforming ideas into exceptional digital experiences through expertise in design, development, and strategic consulting.
          </p>
        </div>
      </div>
      <div
        style="perspective: 1000px;"
      >
        <div
          class="MuiBox-root css-1sqldwm"
        >
          <div>
            <div
              class="MuiBox-root css-1nzjfdj"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ci629l-MuiTypography-root"
              >
                01
              </p>
              <div
                class="service-icon-wrapper MuiBox-root css-bx6ysq"
              >
                <div
                  class="service-ring MuiBox-root css-mqdjlt"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="WebIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m-5 14H4v-4h11zm0-5H4V9h11zm5 5h-4V9h4z"
                  />
                </svg>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1b5tq2c-MuiTypography-root"
              >
                Website Creation
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1x5kyux-MuiTypography-root"
              >
                Building modern, responsive, and high-performance websites tailored to your business needs
              </p>
              <div
                class="MuiBox-root css-1otz78b"
              >
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  Custom web applications
                </div>
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  Responsive design
                </div>
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  SEO optimization
                </div>
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  Performance tuning
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="MuiBox-root css-1nzjfdj"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ci629l-MuiTypography-root"
              >
                02
              </p>
              <div
                class="service-icon-wrapper MuiBox-root css-bx6ysq"
              >
                <div
                  class="service-ring MuiBox-root css-mqdjlt"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="LightbulbIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9 21c0 .5.4 1 1 1h4c.6 0 1-.5 1-1v-1H9zm3-19C8.1 2 5 5.1 5 9c0 2.4 1.2 4.5 3 5.7V17c0 .5.4 1 1 1h6c.6 0 1-.5 1-1v-2.3c1.8-1.3 3-3.4 3-5.7 0-3.9-3.1-7-7-7"
                  />
                </svg>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1b5tq2c-MuiTypography-root"
              >
                Ideation
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1x5kyux-MuiTypography-root"
              >
                Transforming your vision into actionable plans with creative brainstorming and strategic thinking
              </p>
              <div
                class="MuiBox-root css-1otz78b"
              >
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  Product conceptualization
                </div>
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  Market research
                </div>
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  Feature prioritization
                </div>
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  MVP planning
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="MuiBox-root css-1nzjfdj"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ci629l-MuiTypography-root"
              >
                03
              </p>
              <div
                class="service-icon-wrapper MuiBox-root css-bx6ysq"
              >
                <div
                  class="service-ring MuiBox-root css-mqdjlt"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="DesignServicesIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m16.24 11.51 1.57-1.57-3.75-3.75-1.57 1.57-4.14-4.13c-.78-.78-2.05-.78-2.83 0l-1.9 1.9c-.78.78-.78 2.05 0 2.83l4.13 4.13L3 17.25V21h3.75l4.76-4.76 4.13 4.13c.95.95 2.23.6 2.83 0l1.9-1.9c.78-.78.78-2.05 0-2.83zm-7.06-.44L5.04 6.94l1.89-1.9L8.2 6.31 7.02 7.5l1.41 1.41 1.19-1.19 1.45 1.45zm7.88 7.89-4.13-4.13 1.9-1.9 1.45 1.45-1.19 1.19 1.41 1.41 1.19-1.19 1.27 1.27zm3.65-11.92c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.47-.47-1.12-.29-1.41 0l-1.83 1.83 3.75 3.75z"
                  />
                </svg>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1b5tq2c-MuiTypography-root"
              >
                Web Designing
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1x5kyux-MuiTypography-root"
              >
                Crafting visually stunning and user-friendly interfaces that captivate and engage your audience
              </p>
              <div
                class="MuiBox-root css-1otz78b"
              >
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  UI/UX design
                </div>
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  Wireframing
                </div>
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  Prototyping
                </div>
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  Design systems
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="MuiBox-root css-1nzjfdj"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ci629l-MuiTypography-root"
              >
                04
              </p>
              <div
                class="service-icon-wrapper MuiBox-root css-bx6ysq"
              >
                <div
                  class="service-ring MuiBox-root css-mqdjlt"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="SupportAgentIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21 12.22C21 6.73 16.74 3 12 3c-4.69 0-9 3.65-9 9.28-.6.34-1 .98-1 1.72v2c0 1.1.9 2 2 2h1v-6.1c0-3.87 3.13-7 7-7s7 3.13 7 7V19h-8v2h8c1.1 0 2-.9 2-2v-1.22c.59-.31 1-.92 1-1.64v-2.3c0-.7-.41-1.31-1-1.62"
                  />
                  <circle
                    cx="9"
                    cy="13"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="13"
                    r="1"
                  />
                  <path
                    d="M18 11.03C17.52 8.18 15.04 6 12.05 6c-3.03 0-6.29 2.51-6.03 6.45 2.47-1.01 4.33-3.21 4.86-5.89 1.31 2.63 4 4.44 7.12 4.47"
                  />
                </svg>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1b5tq2c-MuiTypography-root"
              >
                Tech Consulting
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1x5kyux-MuiTypography-root"
              >
                Providing expert guidance on technology decisions, architecture, and best practices
              </p>
              <div
                class="MuiBox-root css-1otz78b"
              >
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  Architecture review
                </div>
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  Technology selection
                </div>
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  Code audits
                </div>
                <div
                  class="feature-item MuiBox-root css-y8q61d"
                >
                  Team mentoring
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Services matches snapshot (light mode) 1`] = `
<div>
  <section
    class="css-1nm8uox"
    id="services"
  >
    <div
      class="MuiBox-root css-g71ask"
    />
    <div
      class="MuiBox-root css-p80maf"
    />
    <div
      class="MuiBox-root css-dxmich"
    />
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-5c1adp-MuiContainer-root"
    >
      <div>
        <div
          class="MuiBox-root css-x8unny"
        >
          <div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1m3m6zr-MuiTypography-root"
            >
              What I Offer
            </p>
          </div>
          <h2
            class="css-55t5ws"
          >
            Services
          </h2>
          <p
            class="MuiTypography-root MuiTypography-body1 css-16o6c0a-MuiTypography-root"
          >
            Transforming ideas into exceptional digital experiences through expertise in design, development, and strategic consulting.
          </p>
        </div>
      </div>
      <div
        style="perspective: 1000px;"
      >
        <div
          class="MuiBox-root css-1sqldwm"
        >
          <div>
            <div
              class="MuiBox-root css-gqs2pz"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-dxqopu-MuiTypography-root"
              >
                01
              </p>
              <div
                class="service-icon-wrapper MuiBox-root css-1kl7htk"
              >
                <div
                  class="service-ring MuiBox-root css-1oti7i1"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="WebIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m-5 14H4v-4h11zm0-5H4V9h11zm5 5h-4V9h4z"
                  />
                </svg>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-38b2m4-MuiTypography-root"
              >
                Website Creation
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-38s1nx-MuiTypography-root"
              >
                Building modern, responsive, and high-performance websites tailored to your business needs
              </p>
              <div
                class="MuiBox-root css-1otz78b"
              >
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  Custom web applications
                </div>
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  Responsive design
                </div>
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  SEO optimization
                </div>
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  Performance tuning
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="MuiBox-root css-gqs2pz"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-dxqopu-MuiTypography-root"
              >
                02
              </p>
              <div
                class="service-icon-wrapper MuiBox-root css-1kl7htk"
              >
                <div
                  class="service-ring MuiBox-root css-1oti7i1"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="LightbulbIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9 21c0 .5.4 1 1 1h4c.6 0 1-.5 1-1v-1H9zm3-19C8.1 2 5 5.1 5 9c0 2.4 1.2 4.5 3 5.7V17c0 .5.4 1 1 1h6c.6 0 1-.5 1-1v-2.3c1.8-1.3 3-3.4 3-5.7 0-3.9-3.1-7-7-7"
                  />
                </svg>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-38b2m4-MuiTypography-root"
              >
                Ideation
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-38s1nx-MuiTypography-root"
              >
                Transforming your vision into actionable plans with creative brainstorming and strategic thinking
              </p>
              <div
                class="MuiBox-root css-1otz78b"
              >
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  Product conceptualization
                </div>
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  Market research
                </div>
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  Feature prioritization
                </div>
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  MVP planning
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="MuiBox-root css-gqs2pz"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-dxqopu-MuiTypography-root"
              >
                03
              </p>
              <div
                class="service-icon-wrapper MuiBox-root css-1kl7htk"
              >
                <div
                  class="service-ring MuiBox-root css-1oti7i1"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="DesignServicesIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m16.24 11.51 1.57-1.57-3.75-3.75-1.57 1.57-4.14-4.13c-.78-.78-2.05-.78-2.83 0l-1.9 1.9c-.78.78-.78 2.05 0 2.83l4.13 4.13L3 17.25V21h3.75l4.76-4.76 4.13 4.13c.95.95 2.23.6 2.83 0l1.9-1.9c.78-.78.78-2.05 0-2.83zm-7.06-.44L5.04 6.94l1.89-1.9L8.2 6.31 7.02 7.5l1.41 1.41 1.19-1.19 1.45 1.45zm7.88 7.89-4.13-4.13 1.9-1.9 1.45 1.45-1.19 1.19 1.41 1.41 1.19-1.19 1.27 1.27zm3.65-11.92c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.47-.47-1.12-.29-1.41 0l-1.83 1.83 3.75 3.75z"
                  />
                </svg>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-38b2m4-MuiTypography-root"
              >
                Web Designing
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-38s1nx-MuiTypography-root"
              >
                Crafting visually stunning and user-friendly interfaces that captivate and engage your audience
              </p>
              <div
                class="MuiBox-root css-1otz78b"
              >
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  UI/UX design
                </div>
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  Wireframing
                </div>
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  Prototyping
                </div>
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  Design systems
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="MuiBox-root css-gqs2pz"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-dxqopu-MuiTypography-root"
              >
                04
              </p>
              <div
                class="service-icon-wrapper MuiBox-root css-1kl7htk"
              >
                <div
                  class="service-ring MuiBox-root css-1oti7i1"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="SupportAgentIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21 12.22C21 6.73 16.74 3 12 3c-4.69 0-9 3.65-9 9.28-.6.34-1 .98-1 1.72v2c0 1.1.9 2 2 2h1v-6.1c0-3.87 3.13-7 7-7s7 3.13 7 7V19h-8v2h8c1.1 0 2-.9 2-2v-1.22c.59-.31 1-.92 1-1.64v-2.3c0-.7-.41-1.31-1-1.62"
                  />
                  <circle
                    cx="9"
                    cy="13"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="13"
                    r="1"
                  />
                  <path
                    d="M18 11.03C17.52 8.18 15.04 6 12.05 6c-3.03 0-6.29 2.51-6.03 6.45 2.47-1.01 4.33-3.21 4.86-5.89 1.31 2.63 4 4.44 7.12 4.47"
                  />
                </svg>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-38b2m4-MuiTypography-root"
              >
                Tech Consulting
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-38s1nx-MuiTypography-root"
              >
                Providing expert guidance on technology decisions, architecture, and best practices
              </p>
              <div
                class="MuiBox-root css-1otz78b"
              >
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  Architecture review
                </div>
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  Technology selection
                </div>
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  Code audits
                </div>
                <div
                  class="feature-item MuiBox-root css-11b13q6"
                >
                  Team mentoring
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
